[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/StatsBar3D/DoubleStatsBar3D.gd" type="Script" id=1]
[ext_resource path="res://Scenes/StatsBar3D/StatsBar3D.tscn" type="PackedScene" id=2]

[node name="DoubleStatsBar3D" type="Spatial"]
script = ExtResource( 1 )

[node name="StatsBar3D1" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, 0, 0 )

[node name="StatsBar3D2" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, 0, 0 )
stats_type = 1
